# krabby_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.xml  gz_bridge.launch.xml  krabby_simulation.launch  krabby_simulation.launch.py  spawn.launch.py  spawn_and_bridge.launch.py  spawn_world.py
models/Caisse/: caisse.dae  model.config  model.sdf
models/Table2025/: model.sdf
models/Table2026/: Table2026.dae  Table2026_2.blend  Table2026_2.blend1  model.config  model.sdf
models/tag_aruco/: model.config  model.sdf
models/tag_aruco/meshes/: tag_aruco.dae
params/: gz_bridge.yaml
rviz/: viewer.rviz
urdf/: krabby.gazebo  krabby.xacro  krabby_campi.gazebo  krabby_campi.xacro  macros.xacro  materials.xacro  properties.xacro
worlds/: Table_2025_poteaux.sdf  Table_2025_with_cans.sdf  Table_2025_with_cans_planks.sdf  table2025.world  table2026.world  table2026Full.world
