<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>krabby_description</name>
  <version>0.0.0</version>
  <description>The urdf description package for krabby robot</description>

  <maintainer email="yanis.mazouz.ros@yanis.33mail.com">Yanis Mazouz</maintainer>

  <license>MIT</license>

  <depend>eurobot2020_gazebo</depend>
  <depend>xacro</depend>
  <depend>gazebo</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>ros2launch</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds:${prefix}/media"/>
  </export>
</package>
